# trading-agent

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  base.py  engine.py  event_bus.py  market_scanner.py  market_scanner_experts.py  market_scanner_indicators.py  portfolio_monitor.py  position_revaluator.py  report_generator.py  risk_manager.py  signal_critic.py  state.py  trading_executor.py
backend/app/models/: composite_score.py  confidence.py  database.py  db.py  schemas.py  signal.py
backend/app/routers/: agents.py  calendar.py  chat.py  dashboard.py  health.py  memos.py  peers.py  reports.py  research.py  settings.py  signals.py  tasks.py  watchlist.py  ws.py
backend/app/services/: calendar_service.py  claude_service.py  dart_client.py  market_service.py  mcp_client.py  memo_service.py  news_service.py  order_service.py  peer_service.py  portfolio_risk_service.py  portfolio_service.py  runtime_settings.py  scheduler.py  signal_history_service.py  technical_service.py  valuation_service.py  ws_manager.py
backend/data/: trading.db
backend/tests/: test_composite_score.py  test_confidence.py  test_dart_client.py  test_event_persistence.py  test_indicators.py  test_portfolio_risk.py  test_report_summary.py  test_risk_validation.py  test_signal_critic.py  test_signal_models.py  test_valuation.py
docs/: PRD.md  feature_list.json  preview.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+124 files in other folders)
